--- a/package.json
+++ b/package.json
@@ -88,7 +88,9 @@
     "tokenlens": "1.3.0",
     "use-stick-to-bottom": "^1.1.1",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "jspdf": "^2.5.2",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.2",
