--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
     "lucide-react": "^0.446.0",
+    "marked": "^16.4.0",
     "nanoid": "^5.0.8",
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.25",
@@ -70,6 +71,8 @@
     "prosemirror-schema-list": "^1.4.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.34.3",
+    "puppeteer": "^24.23.1",
+    "puppeteer-core": "^24.23.1",
     "radix-ui": "^1.4.3",
     "react": "19.0.0-rc-45804af1-20241021",
     "react-data-grid": "7.0.0-beta.47",
@@ -88,9 +91,7 @@
     "tokenlens": "1.3.0",
     "use-stick-to-bottom": "^1.1.1",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.25.76",
-    "jspdf": "^2.5.2",
-    "html2canvas": "^1.4.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.2",
