--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "dependencies": {
+    "@Mecides-Management-SL/ui": "1.0.9",
     "@ai-sdk/anthropic": "^2.0.25",
     "@ai-sdk/gateway": "^1.0.15",
     "@ai-sdk/provider": "2.0.0",
@@ -31,6 +32,8 @@
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.200.0",
+    "@opentelemetry/instrumentation": ">=0.46.0 && <1.0.0",
+    "@opentelemetry/sdk-logs": ">=0.46.0 && <1.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
@@ -54,7 +57,7 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
-    "lucide-react": "^0.446.0",
+    "lucide-react": "^0.525.0",
     "marked": "^16.4.0",
     "nanoid": "^5.0.8",
     "next": "15.3.0-canary.31",
